<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="las.las.LoginActivity">

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="31dp"
        android:id="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_blue_bright"
        style="@style/Base.TextAppearance.AppCompat.SearchResult"
        android:onClick="@string/submit" />

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick (LoginActivity)"
        android:background="@android:color/holo_blue_bright" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUserId"
        android:textAlignment="textStart"
        tools:ignore="LabelFor,RtlHardcoded"
        android:hint="@string/username"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0px"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColorLink="@android:color/holo_green_dark"
        android:maxLines="1"
        android:text="@string/rahul" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labour_attendance_sheet"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:id="@+id/txtPassword"
        android:layout_marginTop="41dp"
        tools:ignore="HardcodedText,LabelFor,TextFields"
        android:hint="Passwrod"
        android:elevation="0dp"
        android:maxLines="1"
        android:text="12345"
        android:layout_below="@+id/txtUserId"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:soundEffectsEnabled="true" />
</RelativeLayout>
