<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="las.las.LoginActivity">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="las.las.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"/>

    <TextView
        android:text="Userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserId"
        android:layout_alignStart="@+id/txtUserId"
        android:layout_marginTop="22dp"
        android:id="@+id/textView5"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="@string/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/radioButton"
        android:layout_alignStart="@+id/radioButton" />


    <RadioButton
        android:text="@string/ms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:id="@+id/radioButton5"
        android:layout_alignBaseline="@+id/radioButton"
        android:layout_alignBottom="@+id/radioButton"
        android:layout_toEndOf="@+id/save" />

    <RadioButton
        android:text="@string/mr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/radioButton"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:id="@+id/back"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_toEndOf="@+id/radioButton5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        tools:ignore="LabelFor"
        android:hint="@string/enter_name"
        android:layout_alignBaseline="@+id/pasword1"
        android:layout_alignBottom="@+id/pasword1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUserId"
        tools:ignore="LabelFor"
        android:hint="@string/enter_email"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/pasword1"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="32dp" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/save"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />
</RelativeLayout>

</ScrollView>