<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="las.las.LoginActivity">


    <TextView
        android:text="Userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserId"
        android:layout_alignStart="@+id/txtUserId"
        android:layout_marginTop="17dp"
        android:id="@+id/textView5"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="17dp"
        android:id="@+id/pasword1"
        android:layout_alignEnd="@+id/txtUserId"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pasword1"
        android:layout_marginTop="30dp"
        android:id="@+id/save"
        android:layout_alignStart="@+id/pasword1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUserId"
        tools:ignore="LabelFor"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/save"
        android:layout_toEndOf="@+id/radioButton5"
        android:layout_marginStart="17dp"
        android:id="@+id/back"
        tools:ignore="NotSibling" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        tools:ignore="LabelFor"
        android:layout_above="@+id/txtUserId"
        android:layout_marginBottom="23dp"
        android:layout_alignStart="@+id/back"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:ignore="NotSibling"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_alignEnd="@+id/textView1" />

    <TextView
        android:text="Signup "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        tools:ignore="HardcodedText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_span="3"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_alignStart="@+id/name"
        android:layout_alignParentTop="true">

        <RadioButton
            android:text="@string/mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="11dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:layout_alignBottom="@+id/radioButton"
            android:layout_toEndOf="@+id/save"
            tools:ignore="ObsoleteLayoutParam" />

    </RadioGroup>

</RelativeLayout>
